MCR-3264 Enable PMD rule AvoidDuplicateLiterals